Use alphaMask for the overlay only when the svg actually has a mask

alphaMask will fallback to generateBackground when there isn't
actually a mask prefix in the framesvg causing an infinite recurstion

Fallback to a full white rectangle as mask (which means all pixels
allowed) when there is an overlay graphics but *not* a mask prefix
Thix fixes a crash with some not perfectly well formed themes

BUG:510157